電商切版、bootstrap切版

--- a/interior/sass/style-01.sass
+++ b/interior/sass/style-01.sass
@@ -168,6 +168,12 @@ header
     background: url(../images/Banner.jpg) no-repeat
     border-bottom-left-radius: 300px
 
+  @media screen and (min-width: 1920px)
+  height: 100px
+  background: url(../images/Banner.jpg) no-repeat
+  background-size: cover
+  border-bottom-left-radius: 400px
+
   .banner-intro
     background-color: rgba(255, 255, 255, 0.7)
     border-radius: 30px
